# building_bitcoin_with_rust

./: README.md  cargo.toml
btc_lib/: Cargo.toml
btc_lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
btc_lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml  alice.priv.cbor  alice.pub.pem
miner/src/: main.rs
node/: Cargo.toml  blockchain.cbor
node/src/: handler.rs  main.rs  util.rs
wallet/: Cargo.toml
wallet/src/: core.rs  main.rs
