[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
argh = "0.1.13"
btc_lib = { version = "0.1.0", path = "../btc_lib" }
chrono = "0.4.39"
dashmap = "6.1.0"
static_init = "1.0.3"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
