[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
btc_lib = { version = "0.1.0", path = "../btc_lib" }
clap = { version = "4.5.23", features = ["derive"] }
crossbeam-skiplist = "0.1.3"
cursive = "0.21.1"
futures = "0.3.31"
kanal = "0.1.0-pre8"
serde = { version = "1.0.216", features = ["derive"] }
text-to-ascii-art = "0.1.10"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
